# django-js-pretty

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  django_js_pretty.py  pyproject.toml
